--- a/荒木紹介/荒木紹介.css
+++ b/荒木紹介/荒木紹介.css
@@ -36,8 +36,8 @@ body {
   }
 
   .size_1{
-    font-size: 30px;
-    margin-bottom: 30px;
+    font-size: 40px;
+    margin-top: 80px;
   }
   
   h1 {
@@ -52,6 +52,7 @@ body {
   .syoukai_1 {
     margin-bottom: 30px;
     margin-right: 300px;
+    margin-top: 70px;
     padding-left:  auto;
     padding-top: 20px;
     padding-left: 20px;
@@ -143,3 +144,38 @@ body {
   .link{
     color: #000;
   }
+
+
+
+
+
+
+  .img_1 {
+    position: relative;
+    width: 200px;
+    height: 200px;
+  }
+  
+  .toggleButton {
+    position: absolute;
+    top: 0px;
+    right: 17px;
+    padding: 5px 10px;
+    background-color: #555;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    z-index: 1;
+  }
+  
+  .button:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .button span {
+    font-size: 20px;
+  }
+  
+
+  
