--- a/荒木紹介/荒木紹介.css
+++ b/荒木紹介/荒木紹介.css
@@ -8,6 +8,20 @@ body {
     font-size: 18px;
   }
 
+  .area1{
+    max-width: 80px;
+    margin: 0 0 0 0;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 20px;	
+    width: auto;
+    height: auto;
+    padding: 20px;
+    z-index: -1;
+    
+    }
+
   .syoukai_1 p,
   .kome_1 p,
   .home_1 p {
@@ -51,9 +65,9 @@ body {
   
   .syoukai_1 {
     margin-bottom: 30px;
-    margin-right: 300px;
+    margin-right: 30px;
     margin-top: 70px;
-    padding-left:  auto;
+    padding-left:  0px;
     padding-top: 20px;
     padding-left: 20px;
     padding-bottom: 20px;
@@ -62,12 +76,22 @@ body {
     box-shadow: 17px 20px 6px rgba(0, 0, 0, 0.1);
   }
 
+  .douga_1{
+    display: flex;
+  }
+
+  .Douga1{
+    margin-bottom: 200px;
+  }
+
   .sonohoka_1 {
-    margin-bottom: 30px;
-    margin-right: 1000px;
+    margin-bottom: 100px;
+    margin-right: 60px;
+    margin-top: 100px;
     padding-left:  auto;
-    padding-top: 10px;
+    padding-top: 60px;
     padding-left: 20px;
+    padding-right: 100px;
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 17px 20px 6px rgba(0, 0, 0, 0.1);
@@ -110,6 +134,11 @@ body {
   p {
     line-height: 1.6;
     margin-bottom: 10px;
+  }
+
+  .hutter_1{
+    margin-left: 780px;
+    margin-top: -100px;
   }
   
   .kome_1 p:first-of-type {
